Can now save new parts and modify parts.
Now have a functioning search bar, case-insensitive.

Search functions now match UML diagram correctly.

One more save before exception handling.

Added Product Tables and Screen with Buttons.  Both searches working for main now.